--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -57,8 +57,14 @@
             <span>Kartu Mata Kuliah</span>
           </a>
           <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/pengajuan_magang.html">
-    <span>Pengajuan Magang</span>
-  </a>
+            <span>Pengajuan Magang</span>
+          </a>
+          <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/pengajuan_judul.html">
+            <span>Pengajuan Judul</span>
+          </a>
+          <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/pengajuan_ujian.html">
+            <span>Pengajuan Ujian</span>
+          </a>
         </div>
         <a href="#" class="sidebar-dropdown-toggle flex items-center justify-between py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150">
           <div class="flex items-center space-x-2">
