--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -50,6 +50,9 @@
             <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/kurikulum.html">
             <span>Kurikulum</span>
           </a>
+          <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/kusioner.html">
+            <span>Kusioner IKAD/IKAS</span>
+          </a>
           <a href="#" class="nav-link flex items-center space-x-2 py-2 px-3 rounded-lg text-gray-700 hover:bg-gray-100 transition duration-150" data-content="/dashboard/Registrasi/krs.html">
             <span>Kartu Rencana Studi</span>
           </a>
