--- a/dashboard/registrasi/pengajuan_magang.html
+++ b/dashboard/registrasi/pengajuan_magang.html
@@ -7,31 +7,31 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<main class="flex-1 p-4 md:p-6 lg:p-8">
+<main class="flex-1 p-4 md:p-6 lg:p-8 max-w-7xl mx-auto">
     <h1 class="text-xl md:text-2xl font-bold mb-6 text-gray-900">Form Pengajuan Magang</h1>
     <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
         <div class="w-full">
             <form id="pengajuanMagangForm" class="space-y-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="col-span-2 md:col-span-1">
-                        <label for="nim" class="block text-sm font-medium text-gray-700">NIM</label>
-                        <input type="text" id="nim" name="nim" class="mt-1 block w-full rounded-md bg-gray-100 border-gray-300 shadow-sm sm:text-sm" readonly>
+                        <label for="nim" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">NIM</label>
+                        <input type="text" id="nim" name="nim" class="w-full px-3 py-2 sm:px-4 sm:py-2 bg-gray-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" readonly>
                     </div>
                     <div class="col-span-2 md:col-span-1">
-                        <label for="nama_lengkap" class="block text-sm font-medium text-gray-700">Nama Lengkap</label>
-                        <input type="text" id="nama_lengkap" name="nama_lengkap" class="mt-1 block w-full rounded-md bg-gray-100 border-gray-300 shadow-sm sm:text-sm" readonly>
+                        <label for="nama_lengkap" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Nama Lengkap</label>
+                        <input type="text" id="nama_lengkap" name="nama_lengkap" class="w-full px-3 py-2 sm:px-4 sm:py-2 bg-gray-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" readonly>
                     </div>
                     <div class="col-span-2 md:col-span-1">
-                        <label for="nik" class="block text-sm font-medium text-gray-700">NIK</label>
-                        <input type="text" id="nik" name="nik" class="mt-1 block w-full rounded-md bg-gray-100 border-gray-300 shadow-sm sm:text-sm" readonly>
+                        <label for="nik" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">NIK</label>
+                        <input type="text" id="nik" name="nik" class="w-full px-3 py-2 sm:px-4 sm:py-2 bg-gray-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" readonly>
                     </div>
                     <div class="col-span-2 md:col-span-1">
-                        <label for="handphone" class="block text-sm font-medium text-gray-700">Nomor Handphone</label>
-                        <input type="text" id="handphone" name="handphone" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="handphone" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Nomor Handphone</label>
+                        <input type="text" id="handphone" name="handphone" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                     </div>
                     <div class="col-span-2">
-                        <label for="alamat_mahasiswa" class="block text-sm font-medium text-gray-700">Alamat</label>
-                        <textarea id="alamat_mahasiswa" name="alamat_mahasiswa" rows="2" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required></textarea>
+                        <label for="alamat_mahasiswa" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Alamat</label>
+                        <textarea id="alamat_mahasiswa" name="alamat_mahasiswa" rows="2" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required></textarea>
                     </div>
                 </div>
                 
@@ -39,27 +39,27 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div>
-                        <label for="jenisTempat" class="block text-sm font-medium text-gray-700">Jenis Tempat Magang</label>
-                        <select id="jenisTempat" name="jenis_tempat_magang" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="jenisTempat" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Jenis Tempat Magang</label>
+                        <select id="jenisTempat" name="jenis_tempat_magang" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                             <option value="">Pilih Salah Satu</option>
                             <option value="Perusahaan IT">Perusahaan IT</option>
                             <option value="Instansi Pemerintahan">Instansi Pemerintahan</option>
                         </select>
                     </div>
                     <div>
-                        <label for="namaTempat" class="block text-sm font-medium text-gray-700">Nama Tempat Magang</label>
-                        <input type="text" id="namaTempat" name="nama_tempat_magang" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="namaTempat" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Nama Tempat Magang</label>
+                        <input type="text" id="namaTempat" name="nama_tempat_magang" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                     </div>
                     <div class="md:col-span-2">
-                        <label for="alamat" class="block text-sm font-medium text-gray-700">Alamat</label>
-                        <textarea id="alamat" name="alamat" rows="2" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm"></textarea>
+                        <label for="alamat" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Alamat</label>
+                        <textarea id="alamat" name="alamat" rows="2" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base"></textarea>
                     </div>
                     <div>
-                        <label for="kotaKabupaten" class="block text-sm font-medium text-gray-700">Kota/Kabupaten Magang</label>
-                        <input type="text" id="kotaKabupaten" name="kota_kabupaten_magang" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="kotaKabupaten" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Kota/Kabupaten Magang</label>
+                        <input type="text" id="kotaKabupaten" name="kota_kabupaten_magang" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-gray-700">Baru/Ulang</label>
+                        <label class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Baru/Ulang</label>
                         <div class="mt-2 space-y-2">
                             <div class="flex items-center">
                                 <input id="baru" name="baru_ulang" type="radio" value="Baru" class="focus:ring-blue-500 h-4 w-4 text-blue-600 border-gray-300" required>
@@ -72,16 +72,16 @@
                         </div>
                     </div>
                     <div>
-                        <label for="rencanaMulai" class="block text-sm font-medium text-gray-700">Rencana Pelaksanaan Mulai</label>
-                        <input type="date" id="rencanaMulai" name="rencana_mulai" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="rencanaMulai" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Rencana Pelaksanaan Mulai</label>
+                        <input type="date" id="rencanaMulai" name="rencana_mulai" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                     </div>
                     <div>
-                        <label for="rencanaSelesai" class="block text-sm font-medium text-gray-700">Rencana Pelaksanaan Selesai</label>
-                        <input type="date" id="rencanaSelesai" name="rencana_selesai" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" required>
+                        <label for="rencanaSelesai" class="block text-gray-700 text-xs sm:text-sm font-semibold mb-1">Rencana Pelaksanaan Selesai</label>
+                        <input type="date" id="rencanaSelesai" name="rencana_selesai" class="w-full px-3 py-2 sm:px-4 sm:py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-200 text-sm sm:text-base" required>
                     </div>
                 </div>
                 <div class="flex justify-end mt-6">
-                    <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <button type="submit" class="w-full md:w-auto bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-800 transition text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                         Kirim Pengajuan
                     </button>
                 </div>
