--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -19,33 +19,30 @@
       <h2 class="text-xl font-bold text-gray-800" id="profile-nama-main">Memuat...</h2>
       <span class="text-sm text-gray-500 mb-6" id="profile-nim-main">Memuat...</span>
 
-      <div class="space-y-4 w-full">
+      <form id="profileForm" class="space-y-4 w-full">
         <div class="flex flex-col space-y-1">
           <label class="text-xs text-gray-500">Email</label>
           <div class="flex items-center space-x-2">
-            <input type="email" id="input-email" value="" class="flex-1 text-sm text-gray-700 bg-gray-100 p-2 rounded-md border border-gray-200 focus:outline-none focus:ring focus:ring-blue-200" readonly />
-            <button class="p-2 text-blue-600 hover:text-blue-800 transition"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg></button>
+            <input type="email" id="input-email" name="email" value="" class="flex-1 text-sm text-gray-700 bg-blue-50 p-2 rounded-md border border-gray-200 focus:outline-none focus:ring focus:ring-blue-200" />
           </div>
         </div>
         <div class="flex flex-col space-y-1">
           <label class="text-xs text-gray-500">Telephone</label>
           <div class="flex items-center space-x-2">
-            <input type="tel" id="input-telp" value="" class="flex-1 text-sm text-gray-700 bg-gray-100 p-2 rounded-md border border-gray-200" readonly />
-            <button class="p-2 text-blue-600 hover:text-blue-800 transition"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg></button>
+            <input type="tel" id="input-telp" name="telp" value="" class="flex-1 text-sm text-gray-700 bg-blue-50 p-2 rounded-md border border-gray-200" />
           </div>
         </div>
         <div class="flex flex-col space-y-1">
           <label class="text-xs text-gray-500">Handphone</label>
           <div class="flex items-center space-x-2">
-            <input type="tel" id="input-hp" value="" class="flex-1 text-sm text-gray-700 bg-gray-100 p-2 rounded-md border border-gray-200" readonly />
-            <button class="p-2 text-blue-600 hover:text-blue-800 transition"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg></button>
+            <input type="tel" id="input-hp" name="handphone" value="" class="flex-1 text-sm text-gray-700 bg-blue-50 p-2 rounded-md border border-gray-200" />
           </div>
         </div>
-      </div>
-
-      <div class="mt-8 w-full p-4 border border-gray-300 rounded-md bg-gray-50 flex items-center justify-center text-gray-400 text-sm">
-        Kosongkan kotak untuk menghapus
-      </div>
+        
+        <button type="submit" id="saveProfileBtn" class="w-full bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-800 transition text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            Simpan
+        </button>
+      </form>
     </div>
 
     <div class="w-full md:w-2/3 p-6 bg-white rounded-lg shadow-md">
@@ -61,8 +58,7 @@
         <div class="flex flex-col space-y-1">
           <label class="text-xs text-gray-500">No.KTP</label>
           <div class="relative">
-            <input type="text" id="input-nik" value="" class="w-full text-sm p-2 pr-10 rounded-md bg-gray-100 border border-gray-200" readonly />
-            <button class="absolute right-2 top-1/2 -translate-y-1/2 p-1 text-gray-500 hover:text-blue-600 transition"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/></svg></button>
+            <input type="text" id="input-nik" name="nik" value="" class="w-full text-sm p-2 pr-10 rounded-md bg-blue-50 border border-gray-200" />
           </div>
         </div>
         <div class="flex flex-col space-y-1">
@@ -137,5 +133,12 @@
     </div>
   </div>
 </main>
+<form id="profileForm_submit" style="display: none;">
+    <input type="hidden" name="email" id="submit-email">
+    <input type="hidden" name="telp" id="submit-telp">
+    <input type="hidden" name="handphone" id="submit-handphone">
+    <input type="hidden" name="nik" id="submit-nik">
+</form> 
+</div>
 </body>
 </html>
